# GOVAIAPP

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SETUP_INSTRUCTIONS.md  check_syntax.bat  create_core.py  create_structure.bat  direct_syntax_check.py  pyproject.toml  requirements.txt  run_setup.py  setup_core_files.py  setup_structure.py  syntax_check.py
.github/: copilot-instructions.md
.github/Skills/agent-logging/: SKILL.md
.github/Skills/progressive-delivery/: SKILL.md
.github/Skills/rag-azure-ai-search/: SKILL.md
.github/agents/: 01-dev.agent.md  02-qa.agent.md  03-doc.agent.md  04-Validator.agent.md
.github/instructions/: api.instructions.md  python.instructions.md  tests.instructions.md  ui.instructions.md
app/agents/: orchestrator.py
app/api/: main.py  routes.py  schemas.py
app/core/: policy_template.md
app/foundry/: client.py
app/rag/: _azure_client.py  retriever.py
app/ui/: app.py
autogen/: README.md  __init__.py  orchestrator.py
autogen/agents/: producteur_politique_agent.py  rag_interne_agent.py  veille_externe_agent.py
autogen/config/: foundry_config.py
data/: policy_template.md
data/watch/: veille_cache.md
docs/: architecture.md  demo_log.md  governance_model.md
docs/copilot-sessions/: SESSION-02-api-DRAFT.md  SESSION-02-api-FINAL.md  SESSION-02-api.md  SESSION-03-ui-FINAL.md  SESSION-03-ui.md  SESSION-04-foundry-fallback-FINAL.md  SESSION-05-E2E-FINAL.md  SESSION-06-doc.md
tests/: test_autogen_smoke.py  test_rag_smoke.py  test_smoke.py  test_ui_smoke.py
