[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "govaiapp"
version = "0.1.0"
description = "Application de demonstration agentique de gouvernance IA"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "autogen-agentchat>=0.7.0",
    "autogen-core>=0.7.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.16.0",
    "azure-ai-agents>=1.1.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "autogen*"]